--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,16 +33,16 @@ body,
   }
 
   .dark {
-    --background: 222, 47%, 11%;
+    --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
-    --card: 222, 47%, 11%;
+    --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
-    --popover: 222, 47%, 11%;
+    --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
-    --primary: 239 84% 67%;
+    --primary: 217.2 91.2% 59.8%;
     --primary-foreground: 0 0% 100%;
     --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 0 0% 100%;
+    --secondary-foreground: 210 40% 98%;
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
     --accent: 217.2 32.6% 17.5%;
@@ -54,6 +54,7 @@ body,
     --ring: 224.3 76.3% 48%;
   }
 }
+
 @layer base {
   * {
     @apply border-border;
