--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,3 +63,24 @@ body,
     @apply bg-background text-foreground;
   }
 }
+
+/* Fix Scrollbar */
+::-webkit-scrollbar {
+  @apply h-2 w-2;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply rounded-full bg-zinc-600 transition-all;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-gray-500;
+}
+
+::-webkit-scrollbar-corner {
+  @apply bg-transparent;
+}
